--- a/nao_shri_render/config/motions.yaml
+++ b/nao_shri_render/config/motions.yaml
@@ -23,14 +23,78 @@ neutral: [
     sm_tag/neutral/motion22,
 ]
 
-encourage: [
-    sm_tag/encourage/motion1,
-    sm_tag/encourage/motion2,
-    sm_tag/encourage/motion3,
+greeting: [
+    sm_tag/greeting/motion1,
+    sm_tag/greeting/motion2,
+    sm_tag/greeting/motion3,
+    sm_tag/greeting/motion4,
 ]
 
+request: [
+    sm_tag/command/motion1,
+    sm_tag/command/motion2,
+    sm_tag/command/motion3,
+    sm_tag/command/motion4,
+]
 
-attention: [
+request_alts: [
+    sm_tag/command/motion1,
+    sm_tag/command/motion2,
+    sm_tag/command/motion3,
+    sm_tag/command/motion4,
+]
+
+thank_you: [
+    sm_tag/praise/motion1,
+    sm_tag/praise/motion2,
+    sm_tag/praise/motion3,
+    sm_tag/praise/motion4,
+]
+
+affirm: [
+    sm_tag/waiting/motion1,
+    sm_tag/waiting/motion2,
+    sm_tag/waiting/motion3,
+    sm_tag/waiting/motion4,
+]
+
+cant_understand: [
+    sm_tag/command/motion1,
+    sm_tag/command/motion2,
+    sm_tag/command/motion3,
+    sm_tag/command/motion4,
+]
+
+negate: [
+    sm_tag/advice/motion1,
+    sm_tag/advice/motion2,
+    sm_tag/advice/motion3,
+    sm_tag/advice/motion4,
+]
+
+good_bye: [
+    sm_tag/greeting/motion1,
+    sm_tag/greeting/motion2,
+    sm_tag/greeting/motion3,
+    sm_tag/greeting/motion4,
+]
+
+select: [
+    sm_tag/advice/motion1,
+    sm_tag/advice/motion2,
+    sm_tag/advice/motion3,
+    sm_tag/advice/motion4,
+]
+
+notify_success: [
+    sm_tag/consolation/motion1,
+    sm_tag/consolation/motion2,
+    sm_tag/consolation/motion3,
+    sm_tag/consolation/motion4,
+    sm_tag/consolation/motion5,
+]
+
+inform: [
     sm_tag/attention/motion1,
     sm_tag/attention/motion2,
     sm_tag/attention/motion3,
@@ -39,47 +103,42 @@ attention: [
     sm_tag/attention/motion6,
 ]
 
-consolation: [
-    sm_tag/consolation/motion1,
-    sm_tag/consolation/motion2,
-    sm_tag/consolation/motion3,
-    sm_tag/consolation/motion4,
-    sm_tag/consolation/motion5,
+offer: [
+    sm_tag/encourage/motion1,
+    sm_tag/encourage/motion2,
+    sm_tag/encourage/motion3,
 ]
 
-greeting: [
-    sm_tag/greeting/motion1,
-    sm_tag/greeting/motion2,
-    sm_tag/greeting/motion3,
-    sm_tag/greeting/motion4,
-]
-
-waiting: [
-    sm_tag/waiting/motion1,
-    sm_tag/waiting/motion2,
-    sm_tag/waiting/motion3,
-    sm_tag/waiting/motion4,
-]
-
-advice: [
+notify_failure: [
     sm_tag/advice/motion1,
     sm_tag/advice/motion2,
     sm_tag/advice/motion3,
     sm_tag/advice/motion4,
 ]
 
-praise: [
-    sm_tag/praise/motion1,
-    sm_tag/praise/motion2,
-    sm_tag/praise/motion3,
-    sm_tag/praise/motion4,
-]
-
-command: [
-    sm_tag/command/motion1,
-    sm_tag/command/motion2,
-    sm_tag/command/motion3,
-    sm_tag/command/motion4,
+other: [
+    sm_tag/neutral/motion1,
+    sm_tag/neutral/motion2,
+    sm_tag/neutral/motion3,
+    sm_tag/neutral/motion4,
+    sm_tag/neutral/motion5,
+    sm_tag/neutral/motion6,
+    sm_tag/neutral/motion7,
+    sm_tag/neutral/motion8,
+    sm_tag/neutral/motion9,
+    sm_tag/neutral/motion10,
+    sm_tag/neutral/motion11,
+    sm_tag/neutral/motion12,
+    sm_tag/neutral/motion13,
+    sm_tag/neutral/motion14,
+    sm_tag/neutral/motion15,
+    sm_tag/neutral/motion16,
+    sm_tag/neutral/motion17,
+    sm_tag/neutral/motion18,
+    sm_tag/neutral/motion19,
+    sm_tag/neutral/motion20,
+    sm_tag/neutral/motion21,
+    sm_tag/neutral/motion22,
 ]
 
 user_defined: [
