--- a/nao_shri_render/config/motions.yaml
+++ b/nao_shri_render/config/motions.yaml
@@ -1,40 +1,40 @@
 neutral: [
-    sm_tag/neutral/motion1,
-    sm_tag/neutral/motion2,
-    sm_tag/neutral/motion3,
-    sm_tag/neutral/motion4,
-    sm_tag/neutral/motion5,
-    sm_tag/neutral/motion6,
-    sm_tag/neutral/motion7,
+    # sm_tag/neutral/motion1,
+    # sm_tag/neutral/motion2,
+    # sm_tag/neutral/motion3,
+    # sm_tag/neutral/motion4,
+    # sm_tag/neutral/motion5,
+    # sm_tag/neutral/motion6,
+    # sm_tag/neutral/motion7,
     sm_tag/neutral/motion8,
     sm_tag/neutral/motion9,
     sm_tag/neutral/motion10,
-    sm_tag/neutral/motion11,
-    sm_tag/neutral/motion12,
-    sm_tag/neutral/motion13,
+    # sm_tag/neutral/motion11,
+    # sm_tag/neutral/motion12,
+    # sm_tag/neutral/motion13,
     sm_tag/neutral/motion14,
     sm_tag/neutral/motion15,
     sm_tag/neutral/motion16,
     sm_tag/neutral/motion17,
-    sm_tag/neutral/motion18,
+    # sm_tag/neutral/motion18,
     sm_tag/neutral/motion19,
-    sm_tag/neutral/motion20,
-    sm_tag/neutral/motion21,
-    sm_tag/neutral/motion22,
+    # sm_tag/neutral/motion20,
+    # sm_tag/neutral/motion21,
+    # sm_tag/neutral/motion22,
 ]
 
 greeting: [
     sm_tag/greeting/motion1,
-    sm_tag/greeting/motion2,
-    sm_tag/greeting/motion3,
-    sm_tag/greeting/motion4,
+    #sm_tag/greeting/motion2,
+    #sm_tag/greeting/motion3,
+    #sm_tag/greeting/motion4,
 ]
 
 request: [
-    sm_tag/command/motion1,
+    # sm_tag/command/motion1,
     sm_tag/command/motion2,
-    sm_tag/command/motion3,
-    sm_tag/command/motion4,
+    # sm_tag/command/motion3,
+    # sm_tag/command/motion4,
 ]
 
 request_alts: [
@@ -45,10 +45,14 @@ request_alts: [
 ]
 
 thank_you: [
-    sm_tag/praise/motion1,
-    sm_tag/praise/motion2,
-    sm_tag/praise/motion3,
-    sm_tag/praise/motion4,
+    sm_tag/neutral/motion19,
+    sm_tag/neutral/motion20,
+    sm_tag/neutral/motion21,
+    sm_tag/neutral/motion22,
+    # sm_tag/praise/motion1,
+    # sm_tag/praise/motion2,
+    # sm_tag/praise/motion3,
+    # sm_tag/praise/motion4,
 ]
 
 affirm: [
@@ -80,10 +84,10 @@ negate: [
 ]
 
 good_bye: [
-    sm_tag/greeting/motion1,
-    sm_tag/greeting/motion2,
+    #sm_tag/greeting/motion1,
+    #sm_tag/greeting/motion2,
     sm_tag/greeting/motion3,
-    sm_tag/greeting/motion4,
+    #sm_tag/greeting/motion4,
 ]
 
 select: [
@@ -97,7 +101,7 @@ notify_success: [
     sm_tag/consolation/motion1,
     sm_tag/consolation/motion2,
     sm_tag/consolation/motion3,
-    sm_tag/consolation/motion4,
+    #sm_tag/consolation/motion4,
     sm_tag/consolation/motion5,
 ]
 
@@ -105,7 +109,7 @@ inform: [
     sm_tag/attention/motion1,
     sm_tag/attention/motion2,
     sm_tag/attention/motion3,
-    sm_tag/attention/motion4,
+    #sm_tag/attention/motion4,
     sm_tag/attention/motion5,
     sm_tag/attention/motion6,
 ]
